navbar collapse fix
removed navbar height

--- a/css/mainStyle.css
+++ b/css/mainStyle.css
@@ -24,7 +24,6 @@ p {
 
 .navbar {
   margin-bottom: 0px;
-  height: 50px;
 }
 
 .carousel {
